fix(ListIcons): fixed icons causing jumps when loading

--- a/Components/ListIcons/_style.scss
+++ b/Components/ListIcons/_style.scss
@@ -41,11 +41,13 @@
       max-width: 320px;
 
       &-icon {
+        height: 45px;
         margin-bottom: 15px;
+        width: 45px;
 
         svg {
-          height: 45px;
-          width: 45px;
+          height: auto;
+          width: 100%;
         }
       }
 
